--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
-        <start-class>de.hipp.pnp.CharacterGeneratorApplication</start-class>
+        <start-class>CharacterGeneratorApplication</start-class>
     </properties>
 
     <build>
