--- a/genefunk-starter/src/main/resources/application.properties
+++ b/genefunk-starter/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 
 spring.data.jpa.repositories.enabled=true
-spring.data.jdbc.repositories.enabled=false
+spring.jpa.open-in-view=false
