--- a/genefunk-starter/src/main/resources/application.properties
+++ b/genefunk-starter/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=h2
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:./data/database
+spring.datasource.url=jdbc:h2:./data/database;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=sa
 
