--- a/kafka-base/pom.xml
+++ b/kafka-base/pom.xml
@@ -9,35 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>starter</artifactId>
+    <artifactId>kafka-base</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <java.version>11</java.version>
-        <start-class>CharacterGeneratorApplication</start-class>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 
     <dependencies>
         <dependency>
-            <groupId>de.hipp.pnp</groupId>
-            <artifactId>base</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
+            <artifactId>api</artifactId>
             <groupId>de.hipp.pnp</groupId>
-            <artifactId>kafka-base</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
 </project>
