--- a/kafka-consumer/src/main/resources/application.yml
+++ b/kafka-consumer/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: "172.17.136.199:9092"
+    bootstrap-servers: "localhost:9092"
     consumer:
       group-id: "pnp"
       auto-offset-reset: earliest
