--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-    depends: build
+    needs: build
     steps:
       - name: Test with Maven
         run: mvn -B verify -U
