✨ add RabbitMQ to Project

--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>kafka-producer</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.hipp.pnp</groupId>
+            <artifactId>rabbitmq</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
