--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,13 @@
         <module>genefunk-bootstrap</module>
         <module>kafka-producer</module>
         <module>kafka-consumer</module>
+        <module>rabbitmq</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <java.version>17</java.version>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
