✨ sending Objects via RabbitMQ and getting Responses

--- a/genefunk/pom.xml
+++ b/genefunk/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>de.hipp.pnp</groupId>
-            <artifactId>kafka-consumer</artifactId>
+            <artifactId>rabbitmq-consumer</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
