--- a/genefunk/pom.xml
+++ b/genefunk/pom.xml
@@ -22,5 +22,11 @@
             <groupId>de.hipp.pnp</groupId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+
     </dependencies>
 </project>
