--- a/.github/workflows/google-cloudrun-source.yml
+++ b/.github/workflows/google-cloudrun-source.yml
@@ -51,9 +51,9 @@ on:
     branches: [ "live" ]
 
 env:
-  PROJECT_ID: character-generator-service # TODO: update Google Cloud project id
-  SERVICE: pnp-character-generator-service # TODO: update Cloud Run service name
-  REGION: europe-west3 # TODO: update Cloud Run service region
+  PROJECT_ID: character-generator-service
+  SERVICE: pnp-character-generator-service
+  REGION: europe-west3
 
 jobs:
   deploy:
@@ -71,8 +71,8 @@ jobs:
         id: auth
         uses: 'google-github-actions/auth@v0'
         with:
-          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
+          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
+          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
 
       # NOTE: Alternative option - authentication via credentials json
       # - name: Google Auth
@@ -88,7 +88,7 @@ jobs:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
           # NOTE: If required, update to the appropriate source folder
-          source: ./
+          source: ./starter
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
