add env to workflow

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -8,6 +8,11 @@
 
 name: Java CI with Maven and Deploy to Cloud Run if on live branch
 
+env:
+  PROJECT_ID: character-generator-service
+  BASE_SERVICE: pnp-character-generator-service
+  REGION: europe-west3
+
 on:
   push:
     branches: [ "master", "live" ]
@@ -78,7 +83,7 @@ jobs:
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
         with:
-          service: ${{ env.SERVICE }}
+          service: ${{ env.BASE_SERVICE }}
           region: ${{ env.REGION }}
           # NOTE: If required, update to the appropriate source folder
           source: ./starter
