--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Test with Maven
         run: mvn -B verify -U
 
-  build:
+  build-image:
 
     runs-on: ubuntu-latest
     needs: test
@@ -34,16 +34,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: graalvm/setup-graalvm@v1
         with:
           java-version: '17'
-          distribution: 'temurin'
+          version: '22.3.r17-grl'
           cache: maven
       - name: Build with Spring Boot Native
         run: mvn package -Pnative --file pom.xml
-
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
   deploy-base:
     needs:
