switch test build image

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -44,7 +44,7 @@ jobs:
 
   deploy-base:
     needs:
-      - build
+      - build-image
     permissions:
       contents: 'read'
       id-token: 'write'
@@ -79,7 +79,7 @@ jobs:
 
   deploy-genefunk:
     needs:
-      - build
+      - build-image
     permissions:
       contents: 'read'
       id-token: 'write'
