update java version

--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Set up GraalVM 22.3.2
         uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '17'
-          version: '22.3.2'
+          java-version: '17.0.7'
+          distribution: 'graalvm'
           cache: maven
       - name: Build with Spring Boot Native
         run: mvn package -Pnative --file pom.xml
