--- a/.github/workflows/build and deploy.yml
+++ b/.github/workflows/build and deploy.yml
@@ -34,6 +34,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: package with Maven
+        run: mvn package -U
       - name: Set up GraalVM 22.3.2
         uses: graalvm/setup-graalvm@v1
         with:
@@ -49,6 +51,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: package with Maven
+        run: mvn package -U
+     
       - name: Set up GraalVM 22.3.2
         uses: graalvm/setup-graalvm@v1
         with:
