--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -41,6 +41,7 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
     <profiles>
         <profile>
             <id>native</id>
@@ -56,6 +57,26 @@
                                     <goal>compile-no-fork</goal>
                                 </goals>
                                 <phase>package</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <image>
+                                <builder>paketobuildpacks/builder:tiny</builder>
+                                <env>
+                                    <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
+                                </env>
+                            </image>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>process-aot</id>
+                                <goals>
+                                    <goal>process-aot</goal>
+                                </goals>
                             </execution>
                         </executions>
                     </plugin>
