deploy genefunk great again

--- a/.github/workflows/live deployment.yml
+++ b/.github/workflows/live deployment.yml
@@ -14,3 +14,11 @@ jobs:
       service_name: character-generator-service
       pom_folder: starter
     secrets: inherit
+
+  pipeline-genefunk:
+    uses: Matil86/github-actions/.github/workflows/pipeline-cloud-run-service.yaml@main
+    with:
+      build_image: genefunk-generator-service
+      service_name: genefunk-generator-service
+      pom_folder: genefunk-starter
+    secrets: inherit
