--- a/base/src/main/resources/application.properties
+++ b/base/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=0
+server.port=${SERVER_PORT}
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=h2
