--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   rabbitmq:
-    image: 'rabbitmq:3.11-management'
+    image: 'rabbitmq:latest'
     ports:
       - '5672:5672'
       - '15672:15672'
