let's try the new rabbitmq cloud instance

--- a/starter/src/main/resources/application.properties
+++ b/starter/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 server.port=8080
 spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.virtual-host=${RABBITMQ_USERNAME}
