--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -22,9 +22,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>de.hipp.pnp</groupId>
-            <artifactId>rabbitmq-producer</artifactId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>3.0.7</version>
         </dependency>
     </dependencies>
 
