initialize Data Service

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>genefunk</module>
         <module>genefunk-starter</module>
         <module>genefunk-bootstrap</module>
+        <module>data-starter</module>
     </modules>
 
     <properties>
