--- a/security/pom.xml
+++ b/security/pom.xml
@@ -9,24 +9,17 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>data</artifactId>
+    <artifactId>security</artifactId>
 
     <dependencies>
         <dependency>
-            <artifactId>api</artifactId>
-            <groupId>de.hipp.pnp</groupId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
         </dependency>
         <dependency>
-            <artifactId>base</artifactId>
-            <groupId>de.hipp.pnp</groupId>
-            <version>${project.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
-            <version>3.0.7</version>
-        </dependency>
-
     </dependencies>
+
 </project>
