--- a/character-generator-starter/pom.xml
+++ b/character-generator-starter/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>starter</artifactId>
+    <artifactId>character-generator-starter</artifactId>
 
     <properties>
         <start-class>de.hipp.pnp.CharacterGeneratorApplication</start-class>
@@ -20,11 +20,6 @@
             <groupId>de.hipp.pnp</groupId>
             <artifactId>base</artifactId>
             <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>de.hipp.pnp</groupId>
-            <artifactId>security</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.amqp</groupId>
