📝 update README.md

--- a/character-generator-starter/src/main/resources/application.yml
+++ b/character-generator-starter/src/main/resources/application.yml
@@ -1,17 +1,17 @@
 server:
   port: 8080
-  logging:
-    level:
-      com:
-        springframework:
-          web: DEBUG
-          security: DEBUG
-          oauth2: DEBUG
-          boot: DEBUG
-      de:
-        hipp:
-          pnp:
-            auth: INFO
+logging:
+  level:
+    com:
+      springframework:
+        web: DEBUG
+        security: DEBUG
+        oauth2: DEBUG
+        boot: DEBUG
+    de:
+      hipp:
+        pnp:
+          auth: debug
 
 spring:
   profiles:
