🚀 Now with working Google JWT Validation

--- a/character-generator-starter/src/main/resources/application.yml
+++ b/character-generator-starter/src/main/resources/application.yml
@@ -11,7 +11,12 @@ logging:
     de:
       hipp:
         pnp:
-          auth: debug
+          auth: DEBUG
+          security:
+            user: DEBUG  # Add this for UserService, UserRepository, and UserListener
+          base:
+            rabbitmq: DEBUG  # Add this for UserInfoProducer
+          rabbitmq: DEBUG  # Add this for other RabbitMQ components
 
 spring:
   profiles:
